<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include android:id="@+id/layout_title" layout="@layout/view_layout_title"/>
    <cn.ucai.wechat.widget.MFViewPager
        android:id="@+id/layout_viewpage"
        android:layout_below="@id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="48dp">
    </cn.ucai.wechat.widget.MFViewPager>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_alignParentBottom="true">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D6DCDC"/>
        <cn.ucai.wechat.widget.DMTabHost
            android:id="@+id/layout_tabhost"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:paddingBottom="1dp">
            <cn.ucai.wechat.widget.DMTabButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawableTop="@drawable/tab_weixin"
                app:tabtext="@string/app_name">
            </cn.ucai.wechat.widget.DMTabButton>
            <cn.ucai.wechat.widget.DMTabButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawableTop="@drawable/tab_contact_list"
                app:tabtext="@string/contacts">
            </cn.ucai.wechat.widget.DMTabButton>
            <cn.ucai.wechat.widget.DMTabButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawableTop="@drawable/tab_find"
                app:tabtext="@string/discover">
            </cn.ucai.wechat.widget.DMTabButton>
            <cn.ucai.wechat.widget.DMTabButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:drawableTop="@drawable/tab_profile"
                app:tabtext="@string/me">
            </cn.ucai.wechat.widget.DMTabButton>
        </cn.ucai.wechat.widget.DMTabHost>
    </LinearLayout>
</RelativeLayout>