<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="#eff2f6"
              android:orientation="vertical">
    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBarLeftImage="@drawable/em_mm_title_back"
        app:titleBarTitle="@string/title_user_profile"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/setting_item_selector"
        >
        <TextView
            android:text="@string/user_profile_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:paddingLeft="15dp"
            />
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/default_hd_avatar"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divide"
        android:background="@color/black3"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_item_selector"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >
        <TextView
            android:text="@string/user_profile_nick"
            style="@style/list_txt_left_profile"
            />
        <TextView
            android:hint="@string/user_profile_nick"
            style="@style/list_txt_right_profile"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divide"
        android:background="@color/black3"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_item_selector"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >
        <TextView
            android:text="@string/user_profile_id"
            style="@style/list_txt_left_profile"
            />
        <TextView
            android:hint="@string/user_profile_id_hint"
            style="@style/list_txt_right_profile"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divide"
        android:background="@color/black3"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_item_selector"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >
        <TextView
            android:text="@string/user_profile_code_card"
            style="@style/list_txt_left_profile"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/right"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divide"
        android:background="@color/black3"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_item_selector"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >
        <TextView
            android:text="@string/user_profile_address"
            style="@style/list_txt_left_profile"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_item_selector"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:text="@string/user_profile_gender"
            style="@style/list_txt_left_profile"
            />
        <TextView
            android:hint="@string/user_profile_not_set"
            style="@style/list_txt_right_profile"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divide"
        android:background="@color/black3"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_item_selector"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >
        <TextView
            android:text="@string/user_profile_region"
            style="@style/list_txt_left_profile"
            />
        <TextView
            android:hint="@string/user_profile_not_set"
            style="@style/list_txt_right_profile"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divide"
        android:background="@color/black3"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_item_selector"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >
        <TextView
            android:text="@string/user_profile_signature"
            style="@style/list_txt_left_profile"
            />
        <TextView
            android:hint="@string/user_profile_not_filled"
            style="@style/list_txt_right_profile"
            />
    </RelativeLayout>

    <!--start-->

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/top_bar_normal_bg"
        android:gravity="center_vertical" >

        <include layout="@layout/ease_commom_back_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_user_profile"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >
            <ImageView
                android:id="@+id/user_head_avatar"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="8dip"
                android:scaleType="centerCrop"
                android:src="@drawable/em_default_avatar"
                />
            <ImageView
                android:id="@+id/user_head_headphoto_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/user_head_avatar"
                android:layout_alignBottom="@+id/user_head_avatar"
                android:layout_alignRight="@+id/user_head_avatar"
                android:layout_margin="3dip"
                android:src="@drawable/em_profile_headphoto_update_icon"
                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/user_head_avatar"
                android:orientation="vertical"
                android:layout_marginTop="8dip"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/user_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    />

            </LinearLayout>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray_pressed"

            />
        <RelativeLayout
            android:id="@+id/rl_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:paddingTop="10dp"
            android:paddingBottom="10dip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_alignParentLeft="true"
                android:text="@string/nickname"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:textColor="#808080"
                android:background="#FFFFFF"
                />
            <TextView
                android:id="@+id/user_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_alignParentRight="true"
                android:paddingRight="20dip"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:textColor="#3366cc"
                android:background="#FFFFFF"
                />
            <ImageView
                android:id="@+id/ic_right_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/em_ic_right_arrow"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dip"
                />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
