<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBarLeftImage="@drawable/em_mm_title_back"
        app:titleBarTitle="@string/userinfo_txt_profile"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_divide"
                android:background="@color/black3"
                />
            <RelativeLayout
                android:id="@+id/layout_friend_userInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                >
                <ImageView
                    android:id="@+id/iv_friend_avatar"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/default_hd_avatar"
                    />
                <TextView
                    android:id="@+id/tv_friend_nick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户名"
                    android:textSize="20sp"
                    android:layout_toRightOf="@id/iv_friend_avatar"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    />
                <TextView
                    android:id="@+id/tv_friend_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="用户名"
                    android:textSize="12sp"
                    android:layout_toRightOf="@id/iv_friend_avatar"
                    android:layout_below="@id/tv_friend_nick"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_divide"
                android:background="@color/black3"
                />
            <TextView
                android:id="@+id/txt_note_mark"
                style="@style/list_txt_Style_without_right"
                android:text="@string/userinfo_txt_note_mark"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                />
            <Button
                android:id="@+id/btn_add_contact"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/userinfo_btn_add_contact"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_bg_green"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/btn_send_msg"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/userinfo_btn_send_msg"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                android:background="@drawable/btn_bg_green"
                android:visibility="gone"
                />
            <Button
                android:id="@+id/btn_send_video"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/userinfo_btn_send_video"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:background="@drawable/setting_item_selector"
                android:visibility="gone"
                />
        </LinearLayout>
    </ScrollView>



</LinearLayout>